src/test/deca/syntax/invalid/without_class/var_beginning_by_number.deca
/// Description:
// 	  test syntax error when underflow occurs on a float
//
// Resultats:
// 	  Error Syntax
//    line 10
// Historique:
// 	  cree le 19/01/2023
{
    int 6entier = 0;
}